--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
+<html>
+<head>
+	<title>Contact us</title>
+</head>
+<body>
+	<form action="mail.php" method="post">
+		<input type="text" name="name" placeholder="Your name">
+		<input type="email" name="emailaddress" placeholder="Your Email address">
+		<input type="text" name="mobile" placeholder="Your Mobile number">
 
-<html  lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title> Contact from</title>
+		<input type="text" name="message" placeholder="Your Message">
+		<button type="submit">Submit</button>
+	</form>
 
-    </head> 
-    <body>
-       <p> hi ines</p>
-    </body>
-
+</body>
 </html>
