--- a/index.html
+++ b/index.html
@@ -4,14 +4,7 @@
 	<title>Contact us</title>
 </head>
 <body>
-	<form action="mail.php" method="post">
-		<input type="text" name="name" placeholder="Your name">
-		<input type="email" name="emailaddress" placeholder="Your Email address">
-		<input type="text" name="mobile" placeholder="Your Mobile number">
-
-		<input type="text" name="message" placeholder="Your Message">
-		<button type="submit">Submit</button>
-	</form>
+ines
 
 </body>
 </html>
