--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@ Ubo est une console composée d’une manette et d’un support. Cette console p
                                             <img src="images/Betacube.png" alt="">
                                         </div>
                                         <p style=" font-weight: bold;font-size: 14px; color: #0077FD;">Betacube</p>
-                                        <p style=" font-size: 10px; color:  #0b2f89;">• Incubateur spécialisé en fintech</p>
+                                        <p style=" font-size: 10px; color:  #0b2f89;">• Venture builder spécialisé en fintech et en mobilité</p>
                                         <p style=" font-size: 10px; color:  #0077FD;">www.betacube.io</p>
 
                                         
