--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@ Ubo est une console composée d’une manette et d’un support. Cette console p
                     <li><a href="#system" class="title-header-style">Comment ça marche ?</a></li>
                     <li><a href="#feature-page" class="title-header-style">Caractéristiques</a></li>
                     <li><a href="#team-page" class="title-header-style">Équipe</a></li>
+                  
                     <li><a href="#contact-page" class="title-header-style">Contact</a></li>
+                    <li><a href="condition.html" class="title-header-style">Conditions d’accès et d’utilisation</a></li>
                 </ul>
             </nav>
         </div>
@@ -541,6 +543,7 @@ Ubo est une console composée d’une manette et d’un support. Cette console p
 
             </div>
         </div>
+        
     </footer>
 
 
